--- a/app/scss/helpers/_all.scss
+++ b/app/scss/helpers/_all.scss
@@ -2,6 +2,8 @@
 //    IMPORT ALL Helpers
 //------------------------------------
 
+@import 'icon';
+
 // import files
 @import 'svg-icons/variables';
 @import 'svg-icons/style';
