--- a/app/scss/components/_all.scss
+++ b/app/scss/components/_all.scss
@@ -2,11 +2,11 @@
 @import "c-buttons";
 @import "c-pagination";
 @import "c-breadcrumbs";
+@import "c-slick";
 @import "c-hero";
 @import "c-search";
 @import "c-newsletter";
-@import "c-media";
-@import "c-program";
+@import "c-rotated-text";
 
 // Navigations
 @import "c-navigations/c-nav-header";
@@ -17,5 +17,9 @@
 @import "c-socials/c-soc-header";
 @import "c-socials/c-soc-content";
 
-// Sliders
-@import "c-sliders/c-slick";
+// c-media objects
+@import "c-media/c-media";
+
+// c-program objects
+@import "c-program/c-program";
+@import "c-program/c-program--diff";
