--- a/app/scss/blocks/b-slider/_b-slider--video.scss
+++ b/app/scss/blocks/b-slider/_b-slider--video.scss
@@ -119,11 +119,18 @@
       }
     }
     .icon--arrow-slider {
+      color: colorFunc(slider, arrows-prim);
       @include breakpoint(tablet) {
         top: 6.5rem;
       }
       @include breakpoint(desktop) {
         top: 11.5rem;
+      }
+      &.icon--arrow-left {
+        right: 101%;
+      }
+      &.icon--arrow-right {
+        left: 101%;
       }
     }
   }
