--- a/app/scss/pages/_all.scss
+++ b/app/scss/pages/_all.scss
@@ -1,4 +1,10 @@
 //----- Pages
-@import "p-home";
 @import "p-search";
 @import "p-404";
+
+// HP
+@import "hp/hp-newsletter";
+
+// Program
+@import "program/program-category";
+@import "program/program-category--diff";
