--- a/app/scss/blocks/_all.scss
+++ b/app/scss/blocks/_all.scss
@@ -1,13 +1,10 @@
 //----- Blocks
 @import "b-header";
 @import "b-footer";
-
+@import "b-hero";
 @import "b-related";
 @import "b-youtubers";
-
-// b-program
-@import "b-program/b-program";
-@import "b-program/b-program--diff";
+@import "b-download";
 
 // Sliders
 @import "b-slider/b-slider--video";
