--- a/app/scss/pages/program/_program-category--diff.scss
+++ b/app/scss/pages/program/_program-category--diff.scss
@@ -1,13 +1,13 @@
-//----- Program Block / Different layout
-// Pages: Thematic
-.b-program--diff {
+//----- Program Category / Different layout
+// Pages: Programs(Thematic)
+.program-category--diff {
   @extend .clearfix;
   padding-top: 8rem;
   @include breakpoint(desktop) {
     padding-top: 9rem;
   }
   &__head {
-    @extend .b-program__head;
+    @extend .program-category__head;
     margin-bottom: 3.5rem;
     @include breakpoint(tablet) {
       margin-bottom: 2.2rem;
