--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -117,6 +117,11 @@ $colors               : (
   //----- Pages
   // hp
   hp                  : ( //----- program category colors
+    viewer-text       : #fff,
+    viewer-btn-prim   : #00fffc,
+    viewer-btn-sec    : #ffec70,
+    viewer-btn-tert   : #ef7298,
+
     nws-bg            : $brand-primary,
     nws-text          : #fff,
     nws-input-bg      : #1644d6,
