--- a/app/scss/settings/_settings.typography.scss
+++ b/app/scss/settings/_settings.typography.scss
@@ -43,6 +43,12 @@ h1 {
   letter-spacing: -1px;
 }
 
+h1,
+h2,
+h3 {
+  font-weight: $font-weight-regular;
+}
+
 //----- Reset default link color
 // h1 a,
 // h2 a,
