--- a/app/scss/components/_all.scss
+++ b/app/scss/components/_all.scss
@@ -6,6 +6,8 @@
 @import "c-search";
 @import "c-newsletter";
 @import "c-rotated-text";
+@import "c-dot";
+@import "c-line";
 
 // Navigations
 @import "c-navigations/c-nav-header";
