--- a/app/scss/pages/_all.scss
+++ b/app/scss/pages/_all.scss
@@ -6,6 +6,9 @@
 @import "hp/hp-viewer";
 @import "hp/hp-newsletter";
 @import "hp/hp-partners";
+@import "hp/hp-tags/hp-tag--primary";
+@import "hp/hp-tags/hp-tag--secondary";
+@import "hp/hp-tags/hp-tag--tertiary";
 
 // Program
 @import "program/program-category";
