--- a/app/scss/components/_c-buttons.scss
+++ b/app/scss/components/_c-buttons.scss
@@ -15,7 +15,7 @@
   position: relative;
   z-index: z(min) + 1;
   @include vendor-prefixes(transition, all .3s);
-  border-radius: 1.5px;
+  @include vendor-prefixes(border-radius, 1px);
   width: 31.3rem;
   height: 7.8rem;
   // @include breakpoint(phone) {
