--- a/app/scss/components/c-program/_c-program.scss
+++ b/app/scss/components/c-program/_c-program.scss
@@ -77,6 +77,7 @@
     text-transform: uppercase;
     color: colorFunc(c-program, text);
     letter-spacing: -1px;
+    overflow-wrap: break-word;
     // word-break: break-all;
     a {
       color: colorFunc(c-program, text);
