--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -103,7 +103,9 @@ $colors                : (
   ),
 
   partners             : ( //----- Partners, some global colors
-    bg                 : #ffec70
+    bg                 : #ffec70,
+    logo-bg            : #fff,
+    h-line             : #000,
   ),
 
   buttons              : ( //----- Buttons colors
