--- a/app/scss/pages/_all.scss
+++ b/app/scss/pages/_all.scss
@@ -5,6 +5,7 @@
 @import "p-partners";
 
 // HP
+@import "hp/p-home";
 @import "hp/hp-viewer";
 @import "hp/hp-newsletter";
 @import "hp/hp-partners";
