--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -163,6 +163,11 @@ $colors                : (
   program-category     : ( //----- program category colors
     text               : #000,
     text-modified      : #fff
+  ),
+  // Press
+  press                : ( //----- press item colors
+    title              : #130098,
+    logo-bg            : #fff
   )
 );
 
