--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -50,7 +50,8 @@ $colors                : (
   ),
 
   b-hero               : ( //----- hero block colors
-    intro              : #fff
+    intro              : #fff,
+    intro-mob          : #000
   ),
   b-related            : ( //----- related block colors
     title              : $brand-primary,
