--- a/app/scss/pages/program/_program-category.scss
+++ b/app/scss/pages/program/_program-category.scss
@@ -7,6 +7,7 @@
   @include breakpoint(tablet) {
     padding: 7.5rem 0;
   }
+
   &:nth-child(odd) {
     .program-category__head {
       @include breakpoint(phone) {
@@ -14,11 +15,15 @@
       }
     }
   }
-
-  &:nth-child(even) {
+  &:nth-of-type(even) {
     background-color: #2a69dc; //////
     .program-category__head {
       color: colorFunc(program-category, text-modified); /////
+    }
+  }
+  &:first-of-type {
+    @include breakpoint(phone) {
+      padding-top: 6rem;
     }
   }
 
