partner single, social share, article content

--- a/app/scss/blocks/_all.scss
+++ b/app/scss/blocks/_all.scss
@@ -5,6 +5,7 @@
 @import "b-related";
 @import "b-youtubers";
 @import "b-download";
+@import "b-article-content";
 
 // Sliders
 @import "b-slider/b-slider--video";
