--- a/app/scss/pages/_all.scss
+++ b/app/scss/pages/_all.scss
@@ -2,6 +2,7 @@
 @import "p-search";
 @import "p-404";
 @import "p-news";
+@import "p-partner";
 @import "p-partners";
 @import "p-press";
 @import "p-program";
