--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -68,6 +68,10 @@ $colors                : (
     c                  : #3a3d74
   ),
 
+  c-social             : ( //----- c-social colors
+    primary            : $brand-primary,
+    secondary          : #fff
+  ),
   c-newsletter         : ( //----- c-newsletter colors
     news-footer-bg     : #0d1f87,
     place-c            : #7781bc,
